# service-template

./: .gitignore  .gitignore.swp  CMakeLists.txt  Makefile  README.md  backend.cpp  backend.h  design.md  main.cpp  vcpkg.json
.github/workflows/: ci.yml  cmake.yml
include/: backend.h
src/: backend.cpp
test/: CMakeLists.txt  benchmark.cpp  benchmark.h  test.cpp  test.h
